kubernetes/main/apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassistant
  name: homeassistant
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: http
  selector:
    app: homeassistant
